--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -90,10 +90,10 @@
         <aside>
             <div class="bg-secondary mt-3 p-3"
                  style="width: 250px; height: 450px; border-radius: 5px; margin-right: 30px">
-                <h5 class="font_style mb-2">
+                <h5 class="font_style mb-4">
                     안녕하세요<br th:text="${nick}+'('+${name}+')님'">
                 </h5>
-                <img th:src="'/upload/'+${profileImg}" alt="프로필 사진" style="width: 220px; height:250px;" class="mb-4">
+                <img th:src="'/upload/'+${profileImg}" alt="프로필 사진" style="width: 220px; height:250px;" class="mb-5">
                 <div class="d-flex">
                     <a href="/home/profile"><button class="btn font_style" type="button" style="width: 130px;">Profile</button></a>
                     <button class="ml-2 btn font_style" type="button" onclick="logOut()" style="width: 80px;">Logout</button>
@@ -113,7 +113,10 @@
         <article style="height: 1000px;">
             <input type="hidden" id="editObj" name="editObj" value="">
             <div>
-                <h4 th:text="${member.email}"></h4>
+               <div class="mt-5 mb-3">
+                   <img th:src="'/upload/'+ ${member.profileImg}" alt="프로필 사진" style="width: 150px; height:150px; border: 2px solid #bcbcbc; border-radius: 50px; ">
+               </div>
+
                 <button type="button" class="btn btn-secondary" onclick="editProfileImg()">프로필 사진 수정</button>
             </div>
             <div>
