--- a/src/main/resources/templates/profileEditPopUp.html
+++ b/src/main/resources/templates/profileEditPopUp.html
@@ -31,46 +31,79 @@
     <script type="text/javascript">
 
         function edit(){
-            if($('#obj').val() == '비밀번호'){
-                if($('#oldObj').val() == null || $('#oldObj').val() == ''){
-                    alert('이전 비밀번호를 입력하세요');
+            if ($('#obj').val() == '프로필'){
+                let isFile = document.getElementById("file").value;
+                if(isFile){
+                    let fileChk = document.getElementById("file").files[0].name;
+                    let fileExt = fileChk.split(".");
+                    if(fileExt[1] != 'png' && fileExt[1] != 'jpg' && fileExt[1] != 'webp'){
+                        alert('이미지 파일 확장자가 아닙니다. \r jpg, png, webp 파일만 변경 가능합니다.');
+                        return;
+                    }
+                } else {
+                    alert('이미지 파일이 존재 하지 않습니다.');
                     return;
                 }
-                if($('#newObj').val() == null || $('#newObj').val() == ''){
-                    alert('새로운 비밀번호를 입력하세요.');
-                    return;
-                }
-            } else {
-                if($('#oldObj').val() == null || $('#oldObj').val() == ''){
-                    alert('이전 값을 입력하세요');
-                    return;
-                }
-                if($('#newObj').val() == null || $('#newObj').val() == ''){
-                    alert('새로운 값을 입력하세요');
-                    return;
-                }
-            }
-            if(confirm('변경 하시겠습니까?')){
-                let params = $('#frm').serialize();
-                $.ajax({
-                    url :"/home/profileEditPopUp/edit",
-                    data : params,
-                    datatype : 'text',
-                    type : "POST",
-                    success : function(result){
-                        if(result == 'notPwd'){
-                            alert('비밀번호가 일치 하지 않습니다.');
-                        } else if(result == 'notEmail'){
-                            alert('기존의 이메일이 맞지 않습니다.');
-                        } else if(result == 'notNick'){
-                            alert('기존의 닉네임이 맞지 않습니다.');
-                        } else {
+                if(confirm('프로필 사진을 변경 하시겠습니까?')){
+                    let form = $('#frm')[0];
+                    let params = new FormData(form);
+                    $.ajax({
+                        url :"/home/profileEditPopUp/edit",
+                        data : params,
+                        datatype : 'text',
+                        enctype: 'multipart/form-data',
+                        type : "POST",
+                        processData: false,
+                        contentType: false,
+                        success : function(result){
                             alert('변경 완료되었습니다.');
                             opener.parent.location.reload();
                             window.close();
                         }
+                    });
+                }
+            } else {
+                if($('#obj').val() == '비밀번호'){
+                    if($('#oldObj').val() == null || $('#oldObj').val() == ''){
+                        alert('이전 비밀번호를 입력하세요');
+                        return;
                     }
-                });
+                    if($('#newObj').val() == null || $('#newObj').val() == ''){
+                        alert('새로운 비밀번호를 입력하세요.');
+                        return;
+                    }
+                } else {
+                    if($('#oldObj').val() == null || $('#oldObj').val() == ''){
+                        alert('이전 값을 입력하세요');
+                        return;
+                    }
+                    if($('#newObj').val() == null || $('#newObj').val() == ''){
+                        alert('새로운 값을 입력하세요');
+                        return;
+                    }
+                }
+                if(confirm('변경 하시겠습니까?')){
+                    let params = $('#frm').serialize();
+                    $.ajax({
+                        url :"/home/profileEditPopUp/edit",
+                        data : params,
+                        datatype : 'text',
+                        type : "POST",
+                        success : function(result){
+                            if(result == 'notPwd'){
+                                alert('비밀번호가 일치 하지 않습니다.');
+                            } else if(result == 'notEmail'){
+                                alert('기존의 이메일이 맞지 않습니다.');
+                            } else if(result == 'notNick'){
+                                alert('기존의 닉네임이 맞지 않습니다.');
+                            } else {
+                                alert('변경 완료되었습니다.');
+                                opener.parent.location.reload();
+                                window.close();
+                            }
+                        }
+                    });
+                }
             }
         }
     </script>
@@ -78,26 +111,34 @@
 <body>
 <form  class="mt-3" style="margin-left: 80px" id="frm" method="post" action="">
     <input type="hidden" id="obj" name="obj" th:value="${obj}"/>
-    <h2 th:text="'● '+${obj} + ' 변경'" class="mb-3"></h2>
-    <div th:if="${obj} == '비밀번호'">
-        <h4 th:text="${oldObj}"></h4>
-        <input type="password" id="oldObj" name="oldObj" style="width: 230px;"/>
-    </div>
-    <div th:unless="${obj} == '비밀번호'">
-        <h4 th:text="${oldObj}"></h4>
-        <input type="text" id="oldObj" name="oldObj" style="width: 230px;"/>
-    </div>
+
+    <th:block th:if="${obj} == '프로필'">
+        <h2 class="mb-3">● 프로필 사진 변경</h2>
+        <input type='file' id="file" name="file"/>
+    </th:block>
 
 
-
-    <div th:if="${obj} == '비밀번호'" class="mt-3">
-        <h4 th:text="${newObj}"></h4>
-        <input type="password" id="newObj" name="newObj" style="width: 230px;"/>
-    </div>
-    <div th:unless="${obj} == '비밀번호'" class="mt-3">
-        <h4 th:text="${newObj}"></h4>
-        <input type="text" id="newObj" name="newObj" style="width: 230px;"/>
-    </div>
+    <th:block th:unless="${obj} == '프로필'">
+        <!--기존데이터-->
+        <h2 th:text="'● '+${obj} + ' 변경'" class="mb-3"></h2>
+        <div th:if="${obj} == '비밀번호'">
+            <h4 th:text="${oldObj}"></h4>
+            <input type="password" id="oldObj" name="oldObj" style="width: 230px;"/>
+        </div>
+        <div th:unless="${obj} == '비밀번호'">
+            <h4 th:text="${oldObj}"></h4>
+            <input type="text" id="oldObj" name="oldObj" style="width: 230px;"/>
+        </div>
+        <!--새로운 데이터-->
+        <div th:if="${obj} == '비밀번호'" class="mt-3">
+            <h4 th:text="${newObj}"></h4>
+            <input type="password" id="newObj" name="newObj" style="width: 230px;"/>
+        </div>
+        <div th:unless="${obj} == '비밀번호'" class="mt-3">
+            <h4 th:text="${newObj}"></h4>
+            <input type="text" id="newObj" name="newObj" style="width: 230px;"/>
+        </div>
+    </th:block>
     <div><button type="button" class="btn btn-secondary" style="width: 230px; margin-top: 50px" onclick="edit()">변경</button></div>
 </form>
 </body>
